学习掘进小册Mybatis笔记-02

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>mybatis-02-configuration</module>
+        <module>mybatis-03-mapper</module>
     </modules>
 
     <dependencies>
