--- a/mybatis-18-plugin/pom.xml
+++ b/mybatis-18-plugin/pom.xml
@@ -45,5 +45,9 @@
             <artifactId>cglib</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+        </dependency>
     </dependencies>
 </project>
