--- a/pom.xml
+++ b/pom.xml
@@ -4,66 +4,42 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>learn_mybatis</groupId>
-    <artifactId>learn_mybatis</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.mybatis.book</groupId>
+    <artifactId>book_mybatis</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0</version>
 
-    <modules>
-        <module>mybatis-02-configuration</module>
-        <module>mybatis-18-plugin</module>
-        <module>mybatis-21-spring</module>
-        <module>mybatis-23-life</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.12</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.49</version>
+        </dependency>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis</artifactId>
-                <version>3.5.5</version>
-            </dependency>
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.47</version>
-            </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>1.2.17</version>
-            </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
 
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.20</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>cglib</groupId>
-                <artifactId>cglib</artifactId>
-                <version>3.1</version>
-            </dependency>
-
-            <dependency>
-                <groupId>learn_mybatis</groupId>
-                <artifactId>mybatis-18-plugin</artifactId>
-            </dependency>
-
-            <dependency>
-                <groupId>learn_mybatis</groupId>
-                <artifactId>mybatis-02-configuration</artifactId>
-            </dependency>
-
-            <dependency>
-                <groupId>learn_mybatis</groupId>
-                <artifactId>mybatis-21-spring</artifactId>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.1</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
