--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mybatis.book</groupId>
-    <artifactId>book_mybatis</artifactId>
+    <artifactId>book-mybatis</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
 
@@ -13,12 +13,12 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.12</version>
+            <version>3.5.16</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.49</version>
+            <version>8.0.28</version>
         </dependency>
 
         <dependency>
