--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/learn_mybatis?characterEncoding=utf-8&useSSL=false
-jdbc.username=root
-jdbc.password=Yilong981223
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/learn_mybatis?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+jdbc.username=fangyuan
+jdbc.password=Mysql1234
