--- a/mybatis-source-code/src/test/resources/log4j.properties
+++ b/mybatis-source-code/src/test/resources/log4j.properties
@@ -15,14 +15,15 @@
 #
 
 ### Global logging configuration
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=debug, CONSOLE
 
 ### Uncomment for MyBatis logging
-log4j.logger.org.apache.ibatis=ERROR
+log4j.logger.org.apache.ibatis=DEBUG
 
 log4j.logger.org.apache.ibatis.logging=DEBUG
 
 ### Console output...
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p [%t] %.36c - %m%n
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.Encoding=UTF-8
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p [%t] %.36c - %m%n
