--- a/mybatis-source-code/src/test/resources/org/apache/ibatis/databases/blog/blog-derby.properties
+++ b/mybatis-source-code/src/test/resources/org/apache/ibatis/databases/blog/blog-derby.properties
@@ -14,7 +14,7 @@
 #    limitations under the License.
 #
 
-driver=org.apache.derby.jdbc.EmbeddedDriver
-url=jdbc:derby:ibderby;create=true
-username=
-password=
+driver=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://127.0.0.1:3306/learn_mybatis?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+username=fangyuan
+password=Mysql1234
