--- a/mybatis-source-code/src/test/resources/org/apache/ibatis/databases/jpetstore/jpetstore-hsqldb.properties
+++ b/mybatis-source-code/src/test/resources/org/apache/ibatis/databases/jpetstore/jpetstore-hsqldb.properties
@@ -14,8 +14,8 @@
 #    limitations under the License.
 #
 
-driver=org.hsqldb.jdbcDriver
-url=jdbc:hsqldb:.
-username=sa
-password=
+driver=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://127.0.0.1:3306/learn_mybatis?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+username=fangyuan
+password=Mysql1234
 
